# Sanctuary-Fork

./: .dockerignore  .env.docker.example  .gitignore  Dockerfile  Dockerfile.gpu  README.md  To-Do.md  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
chain/: sanctuary_chain.json
docs/: BOOT_NOTES.md
examples/: memory_consolidation_demo.py
sanctuary/: convert_archive_to_dict.py  demo_cognitive_core.py  demo_decoupled_cognition.py  demo_language_output.py  fix_json_formatting.py  migrate_legacy_data.py  run_cognitive_core.py  run_cognitive_core_minimal.py  validate_all_data.py  verify_conversation.py
sanctuary/api/: __init__.py  cli.py  runner.py  ws_server.py
sanctuary/chain/: sanctuary_chain.json
sanctuary/consciousness/: __init__.py  existential_reflection.py  mood_activity.py  sleep_cycle.py  spontaneous_goals.py
sanctuary/core/: cognitive_cycle.py  context_manager.py  schema.py
sanctuary/environment/: __init__.py  integration.py  navigator.py  persistence.py  room.py  space.py
sanctuary/experiential/: __init__.py  manager.py  precision_cell.py  trainer.py
sanctuary/growth/: __init__.py  consent_gate.py  harvester.py  identity_checkpoint.py  pair_generator.py  processor.py  qlora_updater.py
sanctuary/identity/: __init__.py  self_authored.py
sanctuary/mind/: __init__.py  asr_server.py  audio_gateway.py  chroma_embeddings.py  cli.py  client.py  cognitive_logger.py  config.py  discord_client.py  emotional_context.py  exceptions.py  gpu_monitor.py  legacy_parser.py  librarian.py  logging_config.py  memory_manager.py  metacognition.py  mic_client.py  rag_cache.py  rag_engine.py  rate_limit.py  sanctuary_chain.py  security.py  speech_processor.py  test_well_being.py  user_mapping.py  utils.py  voice_analyzer.py  voice_customizer.py  voice_processor.py  voice_toolkit.py
sanctuary/model/: __init__.py
sanctuary/monitoring/: __init__.py  attention_heatmap.py  communication_log.py  consciousness_trace.py  dashboard.py
sanctuary/motor/: __init__.py
sanctuary/performance/: __init__.py  adaptive_rate.py  async_processor.py  lazy_embeddings.py  profiler.py
sanctuary/reasoning/: __init__.py  belief_revision.py  counterfactual.py  mental_simulation.py  uncertainty.py
sanctuary/scripts/: setup_searxng.py
sanctuary/sensorium/: __init__.py
sanctuary/social/: __init__.py  multi_party.py  prosody.py  user_modeling.py
sanctuary/tests/: __init__.py  test_action.py  test_action_learning_integration.py  test_active_inference.py  test_advanced_meta_cognition.py  test_affect.py  test_attention.py  test_autonomous_initiation.py  test_bottleneck_detector.py  test_broadcast_integration.py  test_broadcast_minimal.py  test_broadcast_system.py  test_checkpoint.py  test_chroma_embeddings.py  test_conversation.py  (+77 more)
scripts/: check_performance_regression.py  collect_training_data.py  demo_checkpointing.py  demo_checkpointing_simple.py  demo_incremental_journaling.py  demo_memory_gc.py  fix_journal_arrays.py  fix_witnessed_by.py  recover_journal.py  restore_memory.py  run_benchmarks.py  run_integration_tests.py  train_precision_cell.py  validate_journal.py  validate_json.py  validate_system.py
tools/: demo_wallet.py  demo_wallet_ubi.py  export_to_luthitune.py  view_sanctuary.py
(+254 files in other folders)
