[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sanctuary"
version = "0.1.0"
description = "The Sanctuary - A cognitive architecture framework"
requires-python = ">=3.11"
dependencies = [
    # Core ML dependencies
    "numpy>=2.3.4",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "sentence-transformers>=5.1.2",
    "langchain>=1.0,<2.0",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.0",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=1.2.0",
    "chromadb>=1.3.4",
    "accelerate>=0.28.0",
    "bitsandbytes>=0.41.0",
    # Image generation and vision
    "diffusers>=0.31.0", # For Flux.1 and image generation
    "Pillow>=10.0.0", # For image handling
    "sentencepiece>=0.2.0", # Required for some vision models
    # Web and API
    "quart>=0.19.0",
    "hypercorn>=0.16.0",
    "httpx>=0.28.1",
    "aiohttp>=3.13.2",
    "discord.py>=2.0.0",
    # Audio processing
    "soundfile>=0.13.1",
    "librosa>=0.11.0",
    "scipy>=1.16.3",
    "torchaudio>=2.9.0",
    "sounddevice>=0.5.0", # For microphone capture in device layer
    # Video capture
    "opencv-python>=4.8.0", # For camera devices with DirectShow backend (Windows)
    # Integration tools
    "arxiv>=2.3.0",
    "wikipedia>=1.4.0",
    "wolframalpha>=5.1.3",
    "playwright>=1.55.0",
    "aiodocker>=0.21.0",
    # Async utilities
    "asyncio>=3.4.3",
    "anyio>=3.7.1",
    "schedule>=1.2.0",
    # GPU monitoring (optional)
    "nvidia-ml-py>=12.560.30", # For NVLink detection and GPU monitoring
    # CfC / Liquid Neural Networks (experiential layer)
    "ncps>=0.0.7",  # Apache 2.0 — PyTorch CfC/LTC cells with AutoNCP wiring
    # Utilities
    "python-dotenv>=1.2.1",
    "pydantic>=2.12.4",
    # Serial communication (for sensor devices)
    "pyserial>=3.5", # For Arduino/ESP32/Pico sensors via UART
    # Serialization (pinned for security - CVE-2026-0994 fix for Any recursion depth bypass)
    "protobuf>=6.33.5",
    # Testing
    "hypothesis>=6.100.0",
]

[tool.setuptools.packages.find]
include = ["sanctuary*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["sanctuary/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
collect_ignore_glob = [
    # Hardware-dependent tests (soundfile, discord, torch)
    "sanctuary/tests/test_voice_processor.py",
    "sanctuary/tests/test_voice_customization.py",
    "sanctuary/tests/test_gpu_monitor.py",
    "sanctuary/tests/test_discord_integration.py",
    "sanctuary/tests/test_emotion_detection.py",
    # External ML dependency (sklearn) — not installed in CI
    "sanctuary/tests/test_competitive_logic.py",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "property: Property-based tests using Hypothesis",
    "benchmark: marks tests as performance benchmarks",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.3.1",
]
